--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-project-template",
+  "name": "typescript-hw-08-phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Boguszz.github.io/react-project-template/",
+  "homepage": "https://Boguszz.github.io/typescript-hw-08-phonebook/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
