--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "phonebook",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Boguszz.github.io/phonebook/",
+  "homepage": "https://bohdan-strilets.github.io/phonebook/",
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
